--- a/ChatApp/Base.lproj/Main.storyboard
+++ b/ChatApp/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="hhN-uq-6ZF">
             <objects>
-                <viewController id="zyN-4J-V49" customClass="LoginViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginVC" id="zyN-4J-V49" customClass="LoginViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oeJ-Hx-p1T">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -87,10 +87,37 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="1es-Su-CuC"/>
                     </view>
+                    <navigationItem key="navigationItem" id="hVL-af-d34">
+                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="3is-vU-Ej7">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="logOutPressed:" destination="u1R-CI-Wcd" id="nwS-eQ-Oj0"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vl1-N7-tgk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="533" y="38"/>
+            <point key="canvasLocation" x="1442.0289855072465" y="37.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Mcd-lT-ZHe">
+            <objects>
+                <navigationController storyboardIdentifier="NavigationVC" automaticallyAdjustsScrollViewInsets="NO" id="R7y-V2-yym" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0K5-7m-j7W">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.14901960784313725" green="0.26666666666666666" blue="0.40000000000000002" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="u1R-CI-Wcd" kind="relationship" relationship="rootViewController" id="O00-uw-zvs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cQC-k9-rBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="531.8840579710145" y="37.5"/>
         </scene>
     </scenes>
     <resources>
